--- a/fenris-geometry/Cargo.toml
+++ b/fenris-geometry/Cargo.toml
@@ -13,10 +13,10 @@ serde = { version="1.0", features = [ "derive" ] }
 numeric_literals = { git = "https://github.com/Andlon/numeric_literals", rev = "c43f098e617f0b768b43c185711ed106f4170cd7" }
 nested-vec = { path="../nested-vec" }
 vtkio = { version = "0.3", optional = true }
-proptest = { version="0.9", optional = true }
+proptest = { version="1.0", optional = true }
 # TODO: num isn't really necessary, except for some vtk stuff
 num = "0.2"
 
 [dev-dependencies]
-matrixcompare = { git = "https://github.com/Andlon/matrixcompare.git", rev="dcda6ac11c3c289866e1ac5ee9da3772ab1e3089" }
+matrixcompare = "0.3"
 util = { path="../util" }
