--- a/fenris-quadrature/Cargo.toml
+++ b/fenris-quadrature/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 authors = ["Andreas Longva"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[dev-dependencies]
+matrixcompare = "0.3.0"
 
 [build-dependencies]
 polyquad-parse = { path = "../polyquad-parse", version = "0.1" }
