--- a/paradis/Cargo.toml
+++ b/paradis/Cargo.toml
@@ -15,3 +15,6 @@ serde = { version = "1.0", features = [ "derive" ] }
 [dev-dependencies]
 rand = "0.7"
 proptest = "1.0"
+
+# For examples in docs or elsewhere
+crossbeam = "0.8.1"
