--- a/fenris-sparse/Cargo.toml
+++ b/fenris-sparse/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 nalgebra = "0.25"
+nalgebra-sparse = "0.1"
 rayon = "1.3"
 alga = { version = "0.9", default-features = false }
 num = "0.2"
@@ -16,5 +17,4 @@ paradis = { path = "../paradis" }
 
 [dev-dependencies]
 proptest = "1.0"
-fenris-sparse-proptest = { path = "fenris-sparse-proptest" }
 util = { path = "../util" }
