--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,9 @@ paste = "0.1.7"
 criterion = "0.3.2"
 util = { path = "util" }
 
+# For outputting e.g. convergence test results for later analysis
+serde_json = "1.0.64"
+
 # Many of our integration tests depend on fenris-solid for historical reasons
 # TODO: Fix this
 #fenris-solid = { path = "../fenris-solid" }
