--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,5 +54,13 @@ serde_json = "1.0.64"
 #fenris-solid = { path = "../fenris-solid" }
 
 [workspace]
-members = ["fenris-quadrature", "fenris-geometry", "fenris-optimize", "fenris-sparse", "nested-vec", "paradis", "polyquad-parse" ]
+members = [
+    "fenris-quadrature",
+    "fenris-geometry",
+    "fenris-optimize",
+    "fenris-sparse",
+    "fenris-solid",
+    "nested-vec",
+    "paradis",
+    "polyquad-parse" ]
 #members = ["nested-vec" ]
