--- a/fenris-solid/Cargo.toml
+++ b/fenris-solid/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2018"
 
 [dependencies]
 fenris = { path = "../" }
+serde = "1.0.126"
+numeric_literals = "0.2.0"
+
+[dev-dependencies]
+matrixcompare = "0.3.0"
