--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,9 @@ default = [ "proptest" ]
 [dependencies]
 nalgebra = { version = "0.28", features = [ "serde-serialize" ] }
 nalgebra-sparse = { version = "0.4", features = ["compare"] }
-alga = { version = "0.9", default-features = false }
 vtkio = "0.6"
-num = "0.2"
-numeric_literals = { git = "https://github.com/Andlon/numeric_literals", rev = "c43f098e617f0b768b43c185711ed106f4170cd7" }
+num = "0.4"
+numeric_literals = "0.2.0"
 itertools = "0.9"
 ordered-float = "1.0"
 proptest = { version = "1.0", optional = true }
@@ -25,25 +24,20 @@ rayon = "1.3"
 nested-vec = { path="nested-vec" }
 # TODO: Make serde optional
 serde = { version="1.0", features = [ "derive" ] }
-arrayvec = "0.5.1"
 log = "0.4"
 paradis = { path = "paradis" }
 rustc-hash = "1.1.0"
 thread_local = "1.1.2"
 eyre = "0.6"
 fenris-sparse = { path = "fenris-sparse" }
-fenris-geometry = { path = "fenris-geometry", features = [ "proptest", "vtkio" ] }
+fenris-geometry = { path = "fenris-geometry", features = [ "proptest" ] }
 fenris-optimize = { path = "fenris-optimize" }
 fenris-quadrature = { path = "fenris-quadrature" }
 
 [dev-dependencies]
 nalgebra = { version = "0.28", features = [ "serde-serialize", "compare" ] }
 proptest = "1.0"
-prettytable-rs = "^0.8"
 matrixcompare = "0.3"
-mkl-corrode = { git = "https://github.com/Andlon/mkl-corrode.git", rev="26a0d49d66839d46ec1884a9afcdc8d597a65d84", features = [ "openmp", "ilp64" ] }
-paste = "0.1.7"
-criterion = "0.3.2"
 util = { path = "util" }
 
 # For outputting e.g. convergence test results for later analysis
