--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ itertools = "0.9"
 ordered-float = "1.0"
 proptest = { version = "1.0", optional = true }
 rayon = "1.3"
-nested-vec = { path="nested-vec" }
+fenris-nested-vec = { path="fenris-nested-vec" }
 # TODO: Make serde optional
 serde = { version="1.0", features = [ "derive" ] }
 log = "0.4"
@@ -54,7 +54,6 @@ members = [
     "fenris-optimize",
     "fenris-sparse",
     "fenris-solid",
-    "nested-vec",
+    "fenris-nested-vec",
     "paradis",
     "polyquad-parse" ]
-#members = ["nested-vec" ]
