--- a/fenris-geometry/Cargo.toml
+++ b/fenris-geometry/Cargo.toml
@@ -11,7 +11,7 @@ itertools = "0.9"
 nalgebra = "0.28"
 serde = { version="1.0", features = [ "derive" ] }
 numeric_literals = "0.2.0"
-nested-vec = { path="../nested-vec" }
+fenris-nested-vec = { path="../fenris-nested-vec" }
 proptest = { version="1.0", optional = true }
 
 [dev-dependencies]
