--- a/fenris-solid/Cargo.toml
+++ b/fenris-solid/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fenris = { path = "../" }
+fenris = { path = ".." }
 serde = "1.0.126"
 numeric_literals = "0.2.0"
 
