--- a/paradis/Cargo.toml
+++ b/paradis/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 rayon = "1.3"
-nested-vec = { path = "../nested-vec" }
+fenris-nested-vec = { path = "../fenris-nested-vec" }
 # TODO: Make serde optional
 serde = { version = "1.0", features = [ "derive" ] }
 
