Set license and version of all workspace crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "fenris"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
 
 [package.metadata.docs.rs]
 # For rendering KaTeX on docs.rs
