--- a/fenris-solid/Cargo.toml
+++ b/fenris-solid/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
 name = "fenris-solid"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["Andreas Longva <andreas.b.longva@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 fenris = { path = ".." }
