--- a/paradis/Cargo.toml
+++ b/paradis/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
 name = "paradis"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 rayon = "1.3"
