--- a/polyquad-parse/Cargo.toml
+++ b/polyquad-parse/Cargo.toml
@@ -3,5 +3,6 @@ name = "polyquad-parse"
 version = "0.1.0"
 authors = ["Andreas Longva"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
