--- a/fenris-sparse/Cargo.toml
+++ b/fenris-sparse/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "fenris-sparse"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
