--- a/fenris-sparse/Cargo.toml
+++ b/fenris-sparse/Cargo.toml
@@ -12,7 +12,7 @@ nalgebra = "0.28"
 nalgebra-sparse = "0.4"
 rayon = "1.3"
 num = "0.4"
-paradis = { path = "../paradis" }
+fenris-paradis = { path = "../fenris-paradis" }
 
 [dev-dependencies]
 proptest = "1.0"
