--- a/fenris-quadrature/Cargo.toml
+++ b/fenris-quadrature/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.0.1"
 authors = ["Andreas Longva"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/InteractiveComputerGraphics/fenris"
+description = "Quadrature rules for finite element applications"
 
 [features]
 doc-images = [ "embed-doc-image" ]
