--- a/fenris-sparse/Cargo.toml
+++ b/fenris-sparse/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.0.1"
 authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+repository = "https://github.com/InteractiveComputerGraphics/fenris"
+description = "Sparse matrix functionality for fenris"
 
 [dependencies]
 nalgebra = "0.28"
