--- a/fenris-geometry/Cargo.toml
+++ b/fenris-geometry/Cargo.toml
@@ -3,15 +3,16 @@ name = "fenris-geometry"
 version = "0.0.1"
 authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/InteractiveComputerGraphics/fenris"
+description = "Geometry functionality for fenris"
 
 [dependencies]
 itertools = "0.9"
 nalgebra = "0.28"
 serde = { version="1.0", features = [ "derive" ] }
 numeric_literals = "0.2.0"
-fenris-nested-vec = { path="../fenris-nested-vec" }
+fenris-nested-vec = { version = "0.0.1", path="../fenris-nested-vec" }
 proptest = { version="1.0", optional = true }
 
 [dev-dependencies]
