--- a/fenris-paradis/Cargo.toml
+++ b/fenris-paradis/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.0.1"
 authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/InteractiveComputerGraphics/fenris"
+description = "Parallel processing of disjoint indices for the fenris library"
 
 [dependencies]
 rayon = "1.3"
