--- a/fenris-solid/Cargo.toml
+++ b/fenris-solid/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.0.1"
 authors = ["Andreas Longva <andreas.b.longva@gmail.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/InteractiveComputerGraphics/fenris"
+description = "Solid mechanics functionality for fenris"
 
 [dependencies]
 fenris = { path = ".." }
