--- a/polyquad-parse/Cargo.toml
+++ b/polyquad-parse/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 authors = ["Andreas Longva"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/InteractiveComputerGraphics/fenris"
+description = "Tiny parser for the output of `polyquad` quadrature files."
 
 [dependencies]
