--- a/fenris-paradis/Cargo.toml
+++ b/fenris-paradis/Cargo.toml
@@ -9,7 +9,7 @@ description = "Parallel processing of disjoint indices for the fenris library"
 
 [dependencies]
 rayon = "1.3"
-fenris-nested-vec = { path = "../fenris-nested-vec" }
+fenris-nested-vec = { version = "0.0.1", path = "../fenris-nested-vec" }
 # TODO: Make serde optional
 serde = { version = "1.0", features = [ "derive" ] }
 
