--- a/fenris-solid/Cargo.toml
+++ b/fenris-solid/Cargo.toml
@@ -8,10 +8,10 @@ repository = "https://github.com/InteractiveComputerGraphics/fenris"
 description = "Solid mechanics functionality for fenris"
 
 [dependencies]
-fenris = { path = ".." }
+fenris = { version = "0.0.1", path = ".." }
 serde = "1.0.126"
 numeric_literals = "0.2.0"
 
 [dev-dependencies]
 matrixcompare = "0.3.0"
-fenris-optimize = { path = "../fenris-optimize" }
+fenris-optimize = { version = "0.0.1", path = "../fenris-optimize" }
