--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/InteractiveComputerGraphics/fenris"
-keywords = ["finite element", "fem", "pde"]
+keywords = ["finite", "element", "fem", "pde"]
 categories = ["science"]
 readme = "README.md"
 resolver = "2"
