--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ fenris-sparse = { version= "0.0.2", path = "fenris-sparse" }
 fenris-geometry = { version= "^0.0.5", path = "fenris-geometry", features = [ "proptest" ] }
 fenris-optimize = { version= "0.0.2", path = "fenris-optimize" }
 fenris-quadrature = { version= "0.0.4", path = "fenris-quadrature" }
+mshio = "0.4.2"
 
 [dev-dependencies]
 fenris = { path = ".", features = [ "proptest-support" ]}
