--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ resolver = "2"
 
 [package.metadata.docs.rs]
 # For rendering KaTeX on docs.rs
-rustdoc-args = [ "--html-in-header", "assets/doc-header.html"]
+rustdoc-args = [ "--html-in-header", "assets/doc-header.html",
+                 "--html-before-content", "assets/doc-before-content.html"]
 
 [features]
 default = [ "proptest" ]
