--- a/fenris-geometry/Cargo.toml
+++ b/fenris-geometry/Cargo.toml
@@ -21,5 +21,5 @@ proptest = { version="1.0", optional = true }
 [dev-dependencies]
 fenris-geometry = { path = ".", features = [ "proptest-support" ] }
 nalgebra = { version = "0.28", features = [ "compare" ]}
-matrixcompare = "0.3"
+matrixcompare = { version="0.3", features = ["proptest-support"] }
 util = { path="../util" }
