--- a/fenris-geometry/Cargo.toml
+++ b/fenris-geometry/Cargo.toml
@@ -23,3 +23,4 @@ fenris-geometry = { path = ".", features = [ "proptest-support" ] }
 nalgebra = { version = "0.28", features = [ "compare" ]}
 matrixcompare = { version="0.3", features = ["proptest-support"] }
 util = { path="../util" }
+fenris = { path = ".." }
