--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ serde_json = "1.0.64"
 
 [workspace]
 members = [
+    "fenris-traits",
     "fenris-quadrature",
     "fenris-geometry",
     "fenris-optimize",
