--- a/fenris-optimize/Cargo.toml
+++ b/fenris-optimize/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/InteractiveComputerGraphics/fenris"
 description = "Optimization functionality used by fenris"
 
 [dependencies]
+fenris-traits = { version="0.0.1", path = "../fenris-traits" }
 nalgebra = { version = "0.28", features = ["compare"] }
 numeric_literals = "0.2.0"
 itertools = "0.9"
