--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ log = "0.4"
 rustc-hash = "1.1.0"
 thread_local = "1.1.2"
 eyre = "0.6"
+fenris-traits = { version="0.0.1", path = "fenris-traits" }
 fenris-paradis = { version="0.0.1", path = "fenris-paradis" }
 fenris-nested-vec = { version="0.0.1", path = "fenris-nested-vec" }
 fenris-sparse = { version="0.0.1", path = "fenris-sparse" }
