--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ proptest = "1.0"
 matrixcompare = "0.3"
 util = { path = "util" }
 paste = "1.0.6"
+insta = "1.21.0"
 
 # For outputting e.g. convergence test results for later analysis
 serde_json = "1.0.64"
