--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ matrixcompare = { version="0.3", features = ["proptest-support"] }
 util = { path = "util" }
 paste = "1.0.6"
 insta = "1.21.0"
+criterion = "0.4.0"
 
 # For outputting e.g. convergence test results for later analysis
 serde_json = "1.0.64"
@@ -86,3 +87,7 @@ repository = "https://github.com/InteractiveComputerGraphics/fenris"
 nalgebra = { version = "0.32.1", default-features = false }
 nalgebra-sparse = { version = "0.9.0", default-features = false }
 fenris = { version = "0.0.24", path = "." }
+
+[[bench]]
+name = "assembly"
+harness = false
