--- a/fenris-traits/Cargo.toml
+++ b/fenris-traits/Cargo.toml
@@ -8,4 +8,4 @@ description = "Core traits used by fenris"
 edition = "2021"
 
 [dependencies]
-nalgebra = { version="0.31.0", default-features = false }
+nalgebra = { workspace = true, default-features = false }
