--- a/util/Cargo.toml
+++ b/util/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nalgebra = "0.31"
+nalgebra = { workspace = true }
 num = "0.4"
