--- a/fenris-nested-vec/Cargo.toml
+++ b/fenris-nested-vec/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "fenris-nested-vec"
 version = "0.0.1"
-authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
-edition = "2021"
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/InteractiveComputerGraphics/fenris"
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "A data structure used by fenris"
 
 [dependencies]
