--- a/fenris-optimize/Cargo.toml
+++ b/fenris-optimize/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "fenris-optimize"
 version = "0.0.2"
-authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
-edition = "2021"
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/InteractiveComputerGraphics/fenris"
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Optimization functionality used by fenris"
 
 [dependencies]
