--- a/fenris-paradis/Cargo.toml
+++ b/fenris-paradis/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "fenris-paradis"
 version = "0.0.1"
-authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
-edition = "2021"
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/InteractiveComputerGraphics/fenris"
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Parallel processing of disjoint indices for the fenris library"
 
 [dependencies]
