--- a/fenris-solid/Cargo.toml
+++ b/fenris-solid/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "fenris-solid"
-version = "0.0.23"
-authors = ["Andreas Longva <andreas.b.longva@gmail.com>"]
-edition = "2021"
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/InteractiveComputerGraphics/fenris"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Solid mechanics functionality for fenris"
 
 [package.metadata.docs.rs]
@@ -14,7 +14,7 @@ rustdoc-args = [ "--html-in-header", "assets/doc-header.html",
                  "--html-before-content", "assets/doc-header.html" ]
 
 [dependencies]
-fenris = { version = "^0.0.23", path = ".." }
+fenris = { workspace = true, path = ".." }
 serde = "1.0.126"
 numeric_literals = "0.2.0"
 
