--- a/fenris-traits/Cargo.toml
+++ b/fenris-traits/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "fenris-traits"
 version = "0.0.1"
-authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/InteractiveComputerGraphics/fenris"
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Core traits used by fenris"
-edition = "2021"
 
 [dependencies]
 nalgebra = { workspace = true, default-features = false }
