--- a/util/Cargo.toml
+++ b/util/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "util"
 version = "0.1.0"
-authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
-edition = "2018"
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
