Do not inherit nalgebra default features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,11 @@
 name = "fenris"
 description = "A library for advanced finite element computations in Rust"
 version.workspace = true
-authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
-edition = "2021"
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/InteractiveComputerGraphics/fenris"
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
+
 keywords = ["finite", "element", "fem", "pde"]
 categories = ["science"]
 readme = "README.md"
@@ -82,6 +83,6 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/InteractiveComputerGraphics/fenris"
 
 [workspace.dependencies]
-nalgebra = { version = "0.32.1", features = [ "serde-serialize" ] }
-nalgebra-sparse = { version = "0.9.0", features = ["compare"] }
+nalgebra = { version = "0.32.1", default-features = false }
+nalgebra-sparse = { version = "0.9.0", default-features = false }
 fenris = { version = "0.0.24", path = "." }
