--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ numeric_literals = "0.2.0"
 itertools = "0.10.5"
 ordered-float = "1.0"
 proptest = { version = "1.0", optional = true }
-rayon = "1.3"
+rayon = "1.6.1"
 # TODO: Make serde optional
 serde = { version="1.0", features = [ "derive" ] }
 log = "0.4"
@@ -48,6 +48,7 @@ fenris-quadrature = { version= "0.0.4", path = "fenris-quadrature" }
 mshio = "0.4.2"
 rstar = "0.10"
 fxhash = "0.2.1"
+parking_lot = "0.12.1"
 
 [dev-dependencies]
 fenris = { path = ".", features = [ "proptest-support" ]}
