--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,9 +77,9 @@ members = [
     "polyquad-parse" ]
 
 [workspace.package]
-# Currently only fenris-solid inherits this version. The rule of thumbs is that anything that depends *on* fenris
+# Currently only fenris and fenris-solid inherit this version. The rule of thumb is that anything that depends *on* fenris
 # as part of the workspace should share the same version (and be released at the same time)
-version = "0.0.28"
+version = "0.0.29"
 # Other sub-packages also inherit this stuff
 authors = ["Andreas Longva <andreas.b.longva@gmail.com>"]
 edition = "2021"
@@ -89,7 +89,7 @@ repository = "https://github.com/InteractiveComputerGraphics/fenris"
 [workspace.dependencies]
 nalgebra = { version = "0.32.1", default-features = false }
 nalgebra-sparse = { version = "0.9.0", default-features = false }
-fenris = { version = "0.0.28", path = "." }
+fenris = { version = "0.0.29", path = "." }
 
 [[bench]]
 name = "assembly"
